--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Tapecitry</string>
     <string name="action_settings">Settings</string>
-    <string name="search_hint">Search</string>
+    <string name="search_hint">cafe or age &lt; 7</string>
     <string name="action_sort">Sort</string>
 </resources>
